--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack -w --config webpack.config.js"
+    "serve": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
